--- a/banco_essence/src/main/resources/application.properties
+++ b/banco_essence/src/main/resources/application.properties
@@ -1,12 +1,42 @@
-logging.level.root=INFO
-logging.level.org.springframework=INFO
-logging.level.org.hibernate=ERROR
-logging.level.com.ingeneo=TRACE
-##Configuracion de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/C4_G21_Banca_Essence
+# =====================================================================
+# ----------------------------- MYSQL ---------------------------------
+# =====================================================================
+# logging.level.root=INFO
+# logging.level.org.springframework=INFO
+# logging.level.org.hibernate=ERROR
+# logging.level.com.ingeneo=TRACE
+# ##Configuracion de la base de datos
+# spring.datasource.url=jdbc:mysql://localhost:3306/C4_G21_Banca_Essence
+# spring.datasource.username=root
+# spring.datasource.password=wm.alucard.03
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
+# =====================================================================
+# ---------------------------- MARIADB --------------------------------
+# =====================================================================
+# = DATA SOURCE
+# =====================================================================
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:mariadb://localhost:3306/c4g21_banca_essence
 spring.datasource.username=root
 spring.datasource.password=wm.alucard.03
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Keep the connection alive if idle for a long time (needed in production)
+# spring.datasource.testWhileIdle=true
+# spring.datasource.validationQuery=SELECT 1
+# =====================================================================
+# = JPA / HIBERNATE
+# =====================================================================
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
+# Naming strategy
+# spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+# spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# =====================================================================
